--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="image_button_content">search_icon</string>
     <string name="title_activity_home">HomeActivity</string>
     <string name="img_content">Drapeau du pays séléctionné</string>
+    <string name="capital_text">Capitale :</string>
+    <string name="population_text">Population :</string>
+    <string name="superficie_text">Superficie :</string>
+    <string name="langues_text">Langues :</string>
 </resources>
